class Order{
    constructor(coffeeshop, customer, product, location) {
        this.coffeeshop = coffeeshop
        this.customer = customer
        this.product = product
        this.location = location
    }
}

module.exports = Order