class Rate{
    constructor(coffeeshop, customer, product) {
        this.coffeeshop = coffeeshop
        this.customer = customer
        this.product = product
    }
}

module.exports = Rate